# psyncly

./: .gitignore  Dockerfile  pyproject.toml  scripts.py
benchtest/: init.http  playlists.http  random.http  tracks.http  users.http
psyncly/: app.py  database.py  dependencies.py  middlewares.py  models.py  schemas.py  settings.py
psyncly/api/: core_routes.py
psyncly/api/v1/: __init__.py  account_routes.py  playlist_routes.py  playlists.py  service_account_routes.py  service_accounts.py  service_playlist_routes.py  service_playlists.py  track_routes.py  tracks.py  user_routes.py  users.py  worker_routes.py  workers.py
psyncly/crud/: base_crud.py  generic_crud.py  resources_crud.py
psyncly/schemas/: account_schemas.py  common_schemas.py  playlist_schemas.py  service_account_schemas.py  service_playlist_schemas.py  track_schemas.py  user_schemas.py  worker_schemas.py
tests/: test_routes_v1.py
